Patch from kaliber: use path of executable instead of the command. Thanks! this fixes bug #1773 and #1824. I tested only #1773.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@24131 a95241bf-73f2-0310-859d-f6bbb57e9c96